# flowlang

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
examples/: if_else_example.json
examples/mongo_examples/: db_test.json  docker-compose.yaml
flowlang/: __init__.py  common.py  core.py  library.py
flowlang/base_library/: __init__.py  dict_library.py  list_library.py  math_library.py  objects_library.py  string_library.py
flowlang/base_library/tests/: __init__.py  test_dict_library.py  test_list_library.py  test_math_library.py  test_objects_library.py  test_string_library.py
flowlang/mongo_library/: __init__.py  base_mongo_library.py
flowlang/tests/: __init__.py  test_flow.py  test_links.py  test_node_args.py  test_return_value.py  tests_common.py  tests_library.py
tools/editor/: main.py
tools/editor/viewmodels/: config.py  flow_debug_vm.py  flow_vm.py  library_list_vm.py  link_list_vm.py  node_list_vm.py  pin_list_vm.py
tools/editor/views/: FlowView.qml  Library.qml  NodeItem.qml  PinItem.qml  main.qml
