[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flowlang"
version = "0.0.1"
authors = [
  { name="Evgeny Zhurko", email="evgeny.zhurko@gmail.com" },
]
description = "Flow programming lang"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
exclude = ["*tests*"]